--- a/porjeto01/index.html
+++ b/porjeto01/index.html
@@ -20,7 +20,7 @@
                     <a class="nav-link" href="#parceiros">Parceiros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="servicos">Serviços</a>
+                    <a class="nav-link" href="#servicos">Serviços</a>
                 </li>
             </ul>
             </div>
@@ -80,6 +80,10 @@
             </div>
             
         </selection>
+
+        <footer class="conteiner-fluid text-center bg-footer margin">
+            <p>Desenvolvido por Alex Vieira</p>
+        </footer>
     </body>
    
 </html>
